fix alignment of code snippet

--- a/screen.css
+++ b/screen.css
@@ -78,5 +78,7 @@ p, code {
 #code code {
     width: 100%;
     text-align: center;
+    white-space: pre-line;
+    color: #fff;
 }
 
